# ROSA-Code

./: LICENSE  README.md  generate_data.py
Aura/: CMakeLists.txt  CommonUtils.cpp  CommonUtils.h
Aura/BF/: BloomFilter.h
Aura/Client/: AuraClient.cpp  AuraClient.h  Benchmark.cpp  Benchmark.h  SSEClient.cpp  SSEClient.h
Aura/GGM/: GGMTree.cpp  GGMTree.h
Aura/Server/: AuraServer.cpp  AuraServer.h  RunSSEServer.cpp  SSEServer.cpp  SSEServer.h
Aura/protobuf/: aura.proto
Januspp-256-bit-tag/: CMakeLists.txt  CommonUtils.cpp  CommonUtils.h  constrained_prf.cpp  constrained_prf.h  pun_encryption.cpp  pun_encryption.h  pun_prf.cpp  pun_prf.h
Januspp-256-bit-tag/Client/: Benchmark.cpp  Benchmark.h  DianaClient.cpp  DianaClient.h  JanusppClient.cpp  JanusppClient.h  RunSSEClient.cpp  SSEClient.cpp  SSEClient.h
Januspp-256-bit-tag/Server/: DianaServer.cpp  DianaServer.h  JanusppServer.cpp  JanusppServer.h  RunSSEServer.cpp  SSEServer.cpp  SSEServer.h
Januspp-256-bit-tag/protobuf/: januspp.proto
Mitra/: CMakeLists.txt  CommonUtils.cpp  CommonUtils.h  main.cpp
Mitra/Client/: Benchmark.cpp  Benchmark.h  MitraClient.cpp  MitraClient.h  RunSSEClient.cpp  SSEClient.cpp  SSEClient.h
Mitra/Server/: MitraServer.cpp  MitraServer.h  RunSSEServer.cpp  SSEServer.cpp  SSEServer.h
Mitra/protobuf/: mitra.proto
ROSA/: CMakeLists.txt  CommonUtils.cpp  CommonUtils.h
ROSA/Client/: Benchmark.cpp  Benchmark.h  HIRBTree.cpp  HIRBTree.h  HIRBTreeNode.cpp  HIRBTreeNode.h  HIRBpathStat.cpp  HIRBpathStat.h  ROSAClient.cpp  ROSAClient.h  RunSSEClient.cpp  SSEClient.cpp  SSEClient.h  vORAMBucket.cpp  vORAMBucket.h  vORAMClient.cpp  vORAMClient.h
ROSA/GGM/: GGMNode.h
ROSA/Server/: ROSAServer.cpp  ROSAServer.h  RunSSEServer.cpp  SSEServer.cpp  SSEServer.h  vORAMServer.cpp  vORAMServer.h
ROSA/protobuf/: FindGRPC.cmake  rosa.proto
ROSE/: CMakeLists.txt  CommonUtils.cpp  CommonUtils.h  KUPRF.cpp  KUPRF.h
ROSE/Client/: Benchmark.cpp  Benchmark.h  ROSEClient.cpp  ROSEClient.h  RunSSEClient.cpp  SSEClient.cpp  SSEClient.h
ROSE/Server/: ROSEServer.cpp  ROSEServer.h  RunSSEServer.cpp  SSEServer.cpp  SSEServer.h
ROSE/protobuf/: rose.proto
